compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__arithmetic_const_ops-43.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "-2 ** 0"

---
InnerCtx {
    eval_infos: [
        EvalInfo { unit_id: UnitId(HirId(Idx::<HirNode>(5))), span: Span { file: None, range: 11..18 }, state: Value(Integer(ConstInt { magnitude: 1, sign: Negative, width: As32 })) },
    ],
    var_to_expr: {
        GlobalDefId(UnitId(HirId(Idx::<HirNode>(5))), DefId(0)): ConstExpr { id: 0 },
    },
}
ConstExpr { id: 0 } -> Integer(ConstInt { magnitude: 1, sign: Negative, width: As32 })


